# dictionary_search

./: .gitignore  CMakeLists.txt  Finder.cpp  Finder.h  QtWindow.cpp  QtWindow.h  README.md  main.cpp  preprocessor.cpp
